# ChangeLog for xfce-extra/xarchiver
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xarchiver/ChangeLog,v 1.5 2006/12/13 18:23:42 welp Exp $

  13 Dec 2006; Peter Weller <welp@gentoo.org> ChangeLog:
  Fixed broken digest wrt bug #157933

  12 Dec 2006; Jeroen Roovers <jer@gentoo.org> xarchiver-0.4.2_rc2.ebuild:
  Marked ~hppa (bug #157879).

  10 Dec 2006; Peter Weller <welp@gentoo.org> xarchiver-0.4.2_rc2.ebuild:
  Changed 7z to 7zip wrt #157426

  07 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  xarchiver-0.4.2_rc2.ebuild:
  Added ~ppc

*xarchiver-0.4.2_rc2 (06 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +xarchiver-0.4.2_rc2.ebuild:
  Initial import, see bug #146563.
