@@ -1,12 +1,16 @@
 DIST xarchiver-0.4.2rc2.tar.bz2 646034 RMD160 f82a79ca73619bbab9a28b5fd72f204124467675 SHA1 8174d8e9cf178480a926ebd0dd18e6396475b769 SHA256 1ecae62e181400cdc712ceab44743dbed77e498d76e0f6045f11eaa0a433113d
+EBUILD xarchiver-0.4.2_rc2-r1.ebuild 770 RMD160 eec8e1fd25cc59c97e6e6f0d87bbfecdf78b23e5 SHA1 17e55fca61e283349873fc4d1bcd490177fb3ccc SHA256 6f8229abd847e304f89713fbe3c429164f57642b7c71c9e7f661a40fa7de4a7c
+MD5 1f0520ef4edc55d6c2e553b23654b235 xarchiver-0.4.2_rc2-r1.ebuild 770
+RMD160 eec8e1fd25cc59c97e6e6f0d87bbfecdf78b23e5 xarchiver-0.4.2_rc2-r1.ebuild 770
+SHA256 6f8229abd847e304f89713fbe3c429164f57642b7c71c9e7f661a40fa7de4a7c xarchiver-0.4.2_rc2-r1.ebuild 770
 EBUILD xarchiver-0.4.2_rc2.ebuild 728 RMD160 d994864be2e0c5eff2ddbffc3989b47885d01918 SHA1 6540a0e6a7c0d59e220fc800e9289349935903cf SHA256 88008a4339ba3901e8f9e71b774cef6bb396cdfcbf3fac7b86519ffc00352577
 MD5 05cbfec5b65c72b6b5d5e4a1a2fb9358 xarchiver-0.4.2_rc2.ebuild 728
 RMD160 d994864be2e0c5eff2ddbffc3989b47885d01918 xarchiver-0.4.2_rc2.ebuild 728
 SHA256 88008a4339ba3901e8f9e71b774cef6bb396cdfcbf3fac7b86519ffc00352577 xarchiver-0.4.2_rc2.ebuild 728
-MISC ChangeLog 774 RMD160 86f3a1a35971ec692c10d15478f96379cd71a5f6 SHA1 4b1b03ebc4ab21df67a10c866deb706343866e76 SHA256 0a35d62eccf2a21ae9dfbfcb71e32b7e272bf2b6b0e7fd01523d6a3b9d0eda25
-MD5 d067c1aab61a72196a3db772338f484a ChangeLog 774
-RMD160 86f3a1a35971ec692c10d15478f96379cd71a5f6 ChangeLog 774
-SHA256 0a35d62eccf2a21ae9dfbfcb71e32b7e272bf2b6b0e7fd01523d6a3b9d0eda25 ChangeLog 774
+MISC ChangeLog 1005 RMD160 594308cb71b16e89fd76c4bbacf8f48548d8033c SHA1 b40fc3292375252a4a6d88fde8597d4c4f9949e9 SHA256 b7a21458e64dfabd425676c9b8964b6b30c37ce77c87d4c3b55a8259ed58e5ee
+MD5 e5b1f6a90ff94d88b9522666dd22f62d ChangeLog 1005
+RMD160 594308cb71b16e89fd76c4bbacf8f48548d8033c ChangeLog 1005
+SHA256 b7a21458e64dfabd425676c9b8964b6b30c37ce77c87d4c3b55a8259ed58e5ee ChangeLog 1005
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
@@ -14,3 +18,6 @@ SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61 metadata
 MD5 4f005ddb0d0261ffaae4d4fa73c3d6b3 files/digest-xarchiver-0.4.2_rc2 259
 RMD160 f82d2416c07f00be50a272a3b625a286064893ec files/digest-xarchiver-0.4.2_rc2 259
 SHA256 f15d531be01c633c86bfdc59e4eb8a55352b9359d7c5e479d99f448074eaab5c files/digest-xarchiver-0.4.2_rc2 259
+MD5 4f005ddb0d0261ffaae4d4fa73c3d6b3 files/digest-xarchiver-0.4.2_rc2-r1 259
+RMD160 f82d2416c07f00be50a272a3b625a286064893ec files/digest-xarchiver-0.4.2_rc2-r1 259
+SHA256 f15d531be01c633c86bfdc59e4eb8a55352b9359d7c5e479d99f448074eaab5c files/digest-xarchiver-0.4.2_rc2-r1 259
