@@ -1,0 +1,3 @@
+MD5 a05010faa1131bbba184595865b70e63 xarchiver-0.4.2rc2.tar.bz2 646034
+RMD160 f82a79ca73619bbab9a28b5fd72f204124467675 xarchiver-0.4.2rc2.tar.bz2 646034
+SHA256 1ecae62e181400cdc712ceab44743dbed77e498d76e0f6045f11eaa0a433113d xarchiver-0.4.2rc2.tar.bz2 646034
