@@ -1,6 +1,13 @@
 # ChangeLog for xfce-extra/xarchiver
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xarchiver/ChangeLog,v 1.5 2006/12/13 18:23:42 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xarchiver/ChangeLog,v 1.6 2006/12/13 21:31:16 welp Exp $
+
+*xarchiver-0.4.2_rc2-r1 (13 Dec 2006)
+
+  13 Dec 2006; Peter Weller <welp@gentoo.org>
+  +xarchiver-0.4.2_rc2-r1.ebuild:
+  Added arj USE flag to ebuild, moved USE-based deps to RDEPEND and went with
+  app-arch/unrar wrt bug #157879
 
   13 Dec 2006; Peter Weller <welp@gentoo.org> ChangeLog:
   Fixed broken digest wrt bug #157933
